--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">WeatherApp</string>
-    <string name="hint_text">Enter city name or zip code</string>
+    <string name="hint_text">Search your city</string>
     <string name="get_weather">Get Weather</string>
+    <string name="disclaimer_text">Disclaimer : All temperature units are in Fahrenheit</string>
 </resources>
